// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerStatusPanel stories > matches snapshot for default story 1`] = `
<DocumentFragment>
  <div
    data-theme="light"
  >
    <div
      class="space-y-4 "
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="flex flex-col space-y-1.5 p-6"
        >
          <h3
            class="font-semibold tracking-tight flex items-center text-sm"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-users mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <path
                d="M16 3.128a4 4 0 0 1 0 7.744"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
            </svg>
            플레이어 현황 (4명)
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="space-y-2 max-h-80 overflow-y-auto"
          >
            <div
              data-testid="animate-presence"
            >
              <div
                animate="[object Object]"
                aria-label="호스트 — 방장"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-purple-200 bg-purple-50
                      
                      
                    "
                data-role="host"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-purple-100 text-purple-600"
                      >
                        호
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-blue-700"
                      >
                        호스트 (나)
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-purple-100 text-purple-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-crown h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"
                            />
                            <path
                              d="M5 21h14"
                            />
                          </svg>
                          <span>
                            방장
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-blue-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-circle-check-big h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21.801 10A10 10 0 1 1 17 3.335"
                          />
                          <path
                            d="m9 11 3 3L22 4"
                          />
                        </svg>
                        <span>
                          완료
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                />
              </div>
              <div
                animate="[object Object]"
                aria-label="시민 A — 시민"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-gray-200 bg-white
                      ring-2 ring-green-300 ring-opacity-50
                      
                    "
                data-role="citizen"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-blue-100 text-blue-600"
                      >
                        시
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        시민 A
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-blue-100 text-blue-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-shield h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                            />
                          </svg>
                          <span>
                            시민
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-green-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-zap h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                          />
                        </svg>
                        <span>
                          진행 중
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="flex items-center space-x-1"
                  >
                    <div
                      class="w-2 h-2 bg-green-500 rounded-full animate-pulse"
                    />
                    <span
                      class="text-xs text-green-600 font-medium"
                    >
                      턴
                    </span>
                  </div>
                </div>
              </div>
              <div
                animate="[object Object]"
                aria-label="의심받는 라이어 — 의심받는 중"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-red-300 bg-red-50 animate-[pulse_2s_ease-in-out_infinite]
                      
                      
                    "
                data-role="suspected"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-red-100 text-red-600"
                      >
                        의
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        의심받는 라이어
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-red-100 text-red-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-target h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="6"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="2"
                            />
                          </svg>
                          <span>
                            의심받는 중
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-yellow-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-clock h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 6v6l4 2"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                        </svg>
                        <span>
                          대기 중
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80 text-xs"
                  >
                    1표
                  </span>
                </div>
              </div>
              <div
                animate="[object Object]"
                aria-label="오프라인 플레이어 — 시민"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-gray-200 bg-white
                      
                      opacity-60
                    "
                data-role="citizen"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-blue-100 text-blue-600"
                      >
                        오
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-gray-400"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        오프라인 플레이어
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-blue-100 text-blue-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-shield h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                            />
                          </svg>
                          <span>
                            시민
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-gray-500"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-wifi-off h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 20h.01"
                          />
                          <path
                            d="M8.5 16.429a5 5 0 0 1 7 0"
                          />
                          <path
                            d="M5 12.859a10 10 0 0 1 5.17-2.69"
                          />
                          <path
                            d="M19 12.859a10 10 0 0 0-2.007-1.523"
                          />
                          <path
                            d="M2 8.82a15 15 0 0 1 4.177-2.643"
                          />
                          <path
                            d="M22 8.82a15 15 0 0 0-11.288-3.764"
                          />
                          <path
                            d="m2 2 20 20"
                          />
                        </svg>
                        <span>
                          오프라인
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 pt-4"
        >
          <div
            class="grid grid-cols-2 gap-4 text-center"
          >
            <div>
              <div
                class="text-lg font-bold text-green-600"
              >
                3
              </div>
              <div
                class="text-xs text-gray-600"
              >
                온라인
              </div>
            </div>
            <div>
              <div
                class="text-lg font-bold text-blue-600"
              >
                1
              </div>
              <div
                class="text-xs text-gray-600"
              >
                투표 완료
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border text-card-foreground shadow-sm border-red-200 bg-red-50"
      >
        <div
          class="p-6 pt-4"
        >
          <div
            class="text-sm text-red-800"
          >
            <div
              class="font-medium mb-2"
            >
              🎯 투표 현황
            </div>
            <div
              class="space-y-1"
            >
              <div
                class="flex justify-between"
              >
                <span>
                  의심받는 라이어
                </span>
                <span
                  class="font-medium"
                >
                  1표
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlayerStatusPanel stories > matches snapshot for liar perspective story 1`] = `
<DocumentFragment>
  <div
    data-theme="light"
  >
    <div
      class="space-y-4 "
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="flex flex-col space-y-1.5 p-6"
        >
          <h3
            class="font-semibold tracking-tight flex items-center text-sm"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-users mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <path
                d="M16 3.128a4 4 0 0 1 0 7.744"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
            </svg>
            플레이어 현황 (4명)
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="space-y-2 max-h-80 overflow-y-auto"
          >
            <div
              data-testid="animate-presence"
            >
              <div
                animate="[object Object]"
                aria-label="호스트 — 방장"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-purple-200 bg-purple-50
                      
                      
                    "
                data-role="host"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-purple-100 text-purple-600"
                      >
                        호
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        호스트
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-purple-100 text-purple-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-crown h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"
                            />
                            <path
                              d="M5 21h14"
                            />
                          </svg>
                          <span>
                            방장
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-blue-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-circle-check-big h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21.801 10A10 10 0 1 1 17 3.335"
                          />
                          <path
                            d="m9 11 3 3L22 4"
                          />
                        </svg>
                        <span>
                          완료
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                />
              </div>
              <div
                animate="[object Object]"
                aria-label="시민 A — 시민"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-gray-200 bg-white
                      
                      
                    "
                data-role="citizen"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-blue-100 text-blue-600"
                      >
                        시
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        시민 A
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-blue-100 text-blue-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-shield h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                            />
                          </svg>
                          <span>
                            시민
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-yellow-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-clock h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 6v6l4 2"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                        </svg>
                        <span>
                          대기 중
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                />
              </div>
              <div
                animate="[object Object]"
                aria-label="의심받는 라이어 — 의심받는 중"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-red-300 bg-red-50 animate-[pulse_2s_ease-in-out_infinite]
                      ring-2 ring-green-300 ring-opacity-50
                      
                    "
                data-role="suspected"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-red-100 text-red-600"
                      >
                        의
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-green-500"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-blue-700"
                      >
                        의심받는 라이어 (나)
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-red-100 text-red-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-target h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="6"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="2"
                            />
                          </svg>
                          <span>
                            의심받는 중
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-green-600"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-zap h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                          />
                        </svg>
                        <span>
                          진행 중
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80 text-xs"
                  >
                    1표
                  </span>
                  <div
                    class="flex items-center space-x-1"
                  >
                    <div
                      class="w-2 h-2 bg-green-500 rounded-full animate-pulse"
                    />
                    <span
                      class="text-xs text-green-600 font-medium"
                    >
                      턴
                    </span>
                  </div>
                </div>
              </div>
              <div
                animate="[object Object]"
                aria-label="오프라인 플레이어 — 시민"
                class="
                      flex items-center justify-between p-3 rounded-lg border transition-all
                      border-gray-200 bg-white
                      
                      opacity-60
                    "
                data-role="citizen"
                exit="[object Object]"
                initial="[object Object]"
                transition="[object Object]"
              >
                <div
                  class="flex items-center space-x-3 flex-1"
                >
                  <div
                    class="relative"
                  >
                    <span
                      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
                    >
                      <span
                        class="flex h-full w-full items-center justify-center rounded-full text-xs bg-blue-100 text-blue-600"
                      >
                        오
                      </span>
                    </span>
                    <div
                      class="absolute -top-1 -right-1 w-3 h-3 rounded-full border-2 border-white bg-gray-400"
                    />
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <span
                        class="font-medium text-sm truncate text-gray-900"
                      >
                        오프라인 플레이어
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-secondary/80 text-xs bg-blue-100 text-blue-600"
                      >
                        <div
                          aria-hidden="true"
                          class="flex items-center space-x-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-shield h-3 w-3"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                            />
                          </svg>
                          <span>
                            시민
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-2 mt-1"
                    >
                      <div
                        class="flex items-center space-x-1 text-xs text-gray-500"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-wifi-off h-3 w-3"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 20h.01"
                          />
                          <path
                            d="M8.5 16.429a5 5 0 0 1 7 0"
                          />
                          <path
                            d="M5 12.859a10 10 0 0 1 5.17-2.69"
                          />
                          <path
                            d="M19 12.859a10 10 0 0 0-2.007-1.523"
                          />
                          <path
                            d="M2 8.82a15 15 0 0 1 4.177-2.643"
                          />
                          <path
                            d="M22 8.82a15 15 0 0 0-11.288-3.764"
                          />
                          <path
                            d="m2 2 20 20"
                          />
                        </svg>
                        <span>
                          오프라인
                        </span>
                      </div>
                      <span
                        class="text-xs text-gray-500"
                      >
                        • 알 수 없음
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center space-x-2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 pt-4"
        >
          <div
            class="grid grid-cols-2 gap-4 text-center"
          >
            <div>
              <div
                class="text-lg font-bold text-green-600"
              >
                3
              </div>
              <div
                class="text-xs text-gray-600"
              >
                온라인
              </div>
            </div>
            <div>
              <div
                class="text-lg font-bold text-blue-600"
              >
                1
              </div>
              <div
                class="text-xs text-gray-600"
              >
                투표 완료
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border text-card-foreground shadow-sm border-red-200 bg-red-50"
      >
        <div
          class="p-6 pt-4"
        >
          <div
            class="text-sm text-red-800"
          >
            <div
              class="font-medium mb-2"
            >
              🎯 투표 현황
            </div>
            <div
              class="space-y-1"
            >
              <div
                class="flex justify-between"
              >
                <span>
                  의심받는 라이어
                </span>
                <span
                  class="font-medium"
                >
                  1표
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
